<resources>
    <string name="app_name">Android Expert Dicoding</string>
    <string name="menu_1">About Me :3</string>
    <string name="menu_2">List Favorit</string>
    <string name="menu_3">Theme</string>

    <string name="detailus">Detail User</string>
    <string name="favorite_button">tombol favorite</string>
    <string name="nameus">Full Name</string>
    <string name="username">Username</string>
    <string name="iduser">id</string>
    <string name="title_favorite">favorite</string>

    <string name="id_format">ID: %1$d</string>
    <string name="followers_format">Followers: %1$d</string>
    <string name="following_format">Following: %1$d</string>

</resources>